--- a/sethgottlieb/content/product/index.html
+++ b/sethgottlieb/content/product/index.html
@@ -7,16 +7,18 @@
 
 {% block content_body %}
 <h3>Articles</h3>
-<ul>
-    <li> <a href="http://www.cmswire.com/cms/web-cms/selecting-a-cms-managing-product-demos-006873.php">Selecting a CMS: Managing Product Demos</a></li>	
+<ul> 
+    <li> <a href="http://www.cmswire.com/cms/web-cms/replacing-your-web-cms-may-be-exactly-the-wrong-thing-to-do-011564.php">Replacing Your Web CMS May Be Exactly the Wrong Thing To Do</a> (<a href="http://www.cmswire.com">cmswire</a>)</li>	
     
-    <li> <a href="http://www.cmswire.com/cms/web-cms/selecting-a-cms-developing-usage-scenarios-006697.php">Selecting a CMS: Developing Usage Scenarios</a></li>	
-	<li> <a href="http://www.cmswire.com/cms/web-cms/selecting-a-cms-how-to-build-a-short-list-006519.php">Selecting a CMS: How to Build a Short List</a></li>	
+    <li> <a href="http://www.cmswire.com/cms/web-cms/selecting-a-cms-managing-product-demos-006873.php">Selecting a CMS: Managing Product Demos</a> (<a href="http://www.cmswire.com">cmswire</a>)</li>	
+    
+    <li> <a href="http://www.cmswire.com/cms/web-cms/selecting-a-cms-developing-usage-scenarios-006697.php">Selecting a CMS: Developing Usage Scenarios</a> (<a href="http://www.cmswire.com">cmswire</a>)</li>	
+	<li> <a href="http://www.cmswire.com/cms/web-cms/selecting-a-cms-how-to-build-a-short-list-006519.php">Selecting a CMS: How to Build a Short List</a> (<a href="http://www.cmswire.com">cmswire</a>)</li>	
 	<li> <a href="http://www.scribd.com/doc/77085653">Drupal for Publishers</a></li>
 	<li> <a href="http://www.scribd.com/doc/77087023">Open Source Web Content Management in Alfresco</a></li>
 	<li> <a href="http://www.scribd.com/doc/77090148">Open Source Web Content Management in Java</a></li>
-	<li> <a href="http://www.cmswire.com/cms/web-cms/what-is-web-20-cm-part-2-001223.php">What is Web 2.0 Content Management? (part 2)</a> (with <a href="http://www.cmswire.com/about/#bd">Brice Dunwoodie</a>)</li>
-	<li> <a href="http://www.cmswire.com/cms/web-cms/what-is-web-20-content-management-part-1-001187.php">What is Web 2.0 Content Management? (part 1)</a> (with <a href="http://www.cmswire.com/about/#bd">Brice Dunwoodie</a>)</li>
+	<li> <a href="http://www.cmswire.com/cms/web-cms/what-is-web-20-cm-part-2-001223.php">What is Web 2.0 Content Management? Part 2 (<a href="http://www.cmswire.com">cmswire</a>)</a> (with <a href="http://www.cmswire.com/about/#bd">Brice Dunwoodie</a>)</li>
+	<li> <a href="http://www.cmswire.com/cms/web-cms/what-is-web-20-content-management-part-1-001187.php">What is Web 2.0 Content Management? Part 1 (<a href="http://www.cmswire.com">cmswire</a>)</a> (with <a href="http://www.cmswire.com/about/#bd">Brice Dunwoodie</a> <a href="http://www.cmswire.com">cmswire</a>)</li>
 	<li> <a href="http://www.cmswatch.com/CMS/Report/">The CMS Report</a> (contributing author to releases 8, 9, 10, 11, 12, and 14)</li>
 	<li> <a href="http://www.optaros.com/en/publications/white_papers_reports/unleashing_the_power_of_open_source_in_document_management">Unleashing the Power of Open Source in Document Management</a>
 (with <a href="http://blog.wohlrapp.com/">Sebastian Wohlrapp</a>)</li>
@@ -24,6 +26,31 @@
 	<li> <a href="http://www.scribd.com/doc/77086683">From Enterprise Content Management to Effective Content Management</a></li>
 </ul>
 <h3>Presentations</h3>
+
+Over the past couple of years, I have presented at the following conferences:
+<ul>
+    <li><a href="http://gilbaneboston.com">Gilbane Boston 2011</a></li>
+    <li><a href="http://jboye.com/conferences/philadelphia11/">J. Boye 2011</a></li>
+	<li><a href="http://gilbaneboston.com">Gilbane Boston 2009</a></li>
+	<li><a href="http://gilbanesf.com">Gilbane San Francisco 2009</a></li>
+	<li><a href="http://gilbaneboston.com/08/">Gilbane Boston 2008</a></li>
+	<li><a href="http://jboye08.dk/speakers/seth_gottlieb">JBoye08</a></li>
+	<li><a href="http://www.webcontent2008.com/chicago/">Web Content 2008</a></li>
+	<li><a href="http://outerthought.org/en/events/oscmsfschat.html">Fireside Conversations:
+Seth Gottlieb On Open Source Content Management</a></li>
+	<li><a href="http://www.opencms-days.org/en/index.html">OpenCms Days 2008</a></li>
+	<li><a href="http://www.cmf2007.dk/">cmf2007</a></li>
+	<li><a href="http://www.doctrain.com/east/">DocTrain East 2007</a></li>
+	<li><a href="http://www.enterprise2conf.com/">Enterprise 2.0</a></li>
+	<li><a href="http://www.webcontent2007.com/">Web Content 2007</a></li>
+	<li><a href="http://gilbanesf.com/07/">Spring Gilbane 2007</a></li>
+	<li> <a href="http://www.integratedmedia.org/nav.cfm?cat=15&amp;subcat=116&amp;subsub=126">Public Media 2007</a></li>
+	<li><a href="http://gilbaneboston.com/06/">Fall Gilbane 2006</a></li>
+	<li><a href="http://lighthouseseminars.com/washingtondc/">Summer Gilbane 2006</a></li>
+	<li><a href="http://lighthouseseminars.com/gilbane_sf_06/sf_06.html">Spring Gilbane 2006</a></li>
+	<li><a href="http://www.linuxworldexpo.com/live/12/events/12BOS06A/conference/tracksessions/Open%20Source%20Applications/QMONYA04R361">LinuxWorld.  Boston, 2006</a></li>
+	<li><a href="http://plone.org/events/regional/nola06">North American Plone Symposium 2006</a></li>
+</ul>
 <div style="margin: 0px 0px 0px 10px; width: 540px;"><object width="538" height="341" data="http://static.slideshare.net.s3.amazonaws.com/swf/egowidget2.swf" type="application/x-shockwave-flash"><param name="allowFullScreen" value="true" /><param name="allowScriptAccess" value="always" /><param name="src" value="http://static.slideshare.net.s3.amazonaws.com/swf/egowidget2.swf" /><param name="flashvars" value="feedurl=user/sggottlieb&amp;widgettitle=My Slideshows" /><param name="allowfullscreen" value="true" /></object> 
 <div style="font-size: 11px; font-family: tahoma,arial; height: 26px; padding-top: 2px; text-align: left;"><a href="http://www.slideshare.net/?src=egowidget"><img style="border:0px none;margin-bottom:-5px" src="http://static.slideshare.net/swf/logo_embd.png" alt="SlideShare" /></a> | <a title="Get your Presentation Pack" href="http://www.slideshare.net/widgets/presentation-pack">Get your Presentation Pack</a></div>
 </div>
