--- a/sethgottlieb/content/index.html
+++ b/sethgottlieb/content/index.html
@@ -1,10 +1,19 @@
 {% extends "skeleton/_body.html" %}
 {% hyde
-    title: "Biography"
+    title: "Home"
     created: 2010-12-29 14:30:00
     listing: False
+    order: "foo"
 %}
 
 {% block content_body %}
-<p>Seth Gottlieb has over 15 years of experience in working with software and content. He has worked on all sides of the content technology economy: CMS customer, CMS integrator, CMS vendor, and CMS industry analyst.  Seth has helped businesses large and small improve the efficiency and effectiveness of their content management and publishing processes. He has held leadership positions at several companies where he has deployed systems using a variety of content management technologies, and developed prototypes in many more. Seth has been a regular contributor to CMS Watch and is the author of Open Source Web Content Management in Java and other articles and reports that have received critical acclaim. Considered a leading authority on the open source content management marketplace, Seth has presented at international conferences including the Gilbane Conferences on Content Technologies, Content Management Forum, Enterprise 2.0, and KM World. Seth served on the 2005/2006 Board of Directors of Content Management Professionals, a membership organization for content management practitioners.</p>
+<p>This is the personal website of Seth Gottlieb...  The same Seth Gottlieb who:</p>
+<ul>
+    <li>Blogs as <a href="http://www.contenthere.net">Content Here</a></li>
+    <li>Tweets as <a href="http://twitter.com/sggottlieb">sggottlieb</a></li>
+    <li>Googles as <a href="http://www.google.com/profiles/sggottlieb">sggottlieb</a></li>
+    <li>Works at <a href="http://www.lionbridge.com">Lionbridge</a></li>
+</ul>
+<p>I am all over the web but you can always find me here.</p>
+
 {% endblock %}
