added hashable to the rejects heap

--- a/sethgottlieb/content/social/rejects.html
+++ b/sethgottlieb/content/social/rejects.html
@@ -38,6 +38,11 @@
 	   <h3>FriendFeed</h3>
 	   <p>I loved the idea and the service.  I got really into the community.  But the Facebook acquisition seemed to suck all the life out of it.</p>  
 	</li>
+	<li class="service-icon service-hashable">
+	   <h3>Hashable</h3>
+	   <p>At first, I thought the Hashable concept was a really interesting way to keep track of connections.  Then I realized that I don't need a new way to keep track of connections and certainly not one that is as tedious as Hashable.  A regular, old address book works just fine.  
+	   </p>
+	 </li>
 	<li class="service-icon service-identica">
 	   <h3>Identi.ca</h3>
 	   <p>I know Twitter and, Identi.ca, you are no Twitter.  The good thing about Twitter is not that you can post 140 characters; it's that Twitter is the place where everyone else posts <em>their</em> 140 characters.  Identi.ca's only hope is a total Twitter meltdown.  But if that happened, Google+ would probably pick up the slack.
