linked all over the web

--- a/sethgottlieb/content/index.html
+++ b/sethgottlieb/content/index.html
@@ -14,6 +14,6 @@
     <li>Googles as <a href="http://www.google.com/profiles/sggottlieb">sggottlieb</a></li>
     <li>Works at <a href="http://www.lionbridge.com">Lionbridge</a></li>
 </ul>
-<p>I am all over the web but you can always find me here.</p>
+<p>I am <a href="/social">all over the web</a> but you can always find me here.</p>
 
 {% endblock %}
