added github and quora. cleaned up description of flickr.

--- a/sethgottlieb/content/social/index.html
+++ b/sethgottlieb/content/social/index.html
@@ -14,8 +14,12 @@
 	    </li>
 	<li class="service-icon service-flickr">
 	    <h3><a  href="http://www.flickr.com/photos/sggottlieb/" title="Seth Gottlieb on Flickr">Flickr - Pictures</a></h3>
-	    <p>I have been using Flickr for years.  One of the most uses for me is that I keep all of my software screenshots there.  This allows me to tag screenshots with what they are showing like "inline editing" and then be able to browse through examples showing this feature.</p>
+	    <p>I have been using Flickr for years.  I most actively use it to organize the many software screenshots that I take.  This allows me to tag screenshots with what they are showing like "inline editing" and then be able to browse through examples showing this feature.</p>
 	    </li>
+	    <li class="service-icon service-github">
+    	    <h3><a href="https://github.com/sggottlieb" title="Seth Gottlieb on Github">github</a></h3>
+    	    <p>I started actively using github long after I fell in love with git.  For a while I used github to get software but it wasn't until I pushed <a href="https://github.com/sggottlieb/cmfieldguide">CM Field Guide</a>, that I got into their social coding model.  Now I see what all the hype is about and it's really cool!</p>
+    	</li>
 	<li class="service-icon service-google">
 	    <h3><a href="http://www.google.com/profiles/sggottlieb" title="Seth Gottlieb on Google">Google Plus</a></h3>
 	    <p>Google Plus has become my alternative to Facebook.  I find that I like Google's values way more than Facebook's so that is where I am putting my social energy.</p>
