--- a/sethgottlieb/content/social/rejects.html
+++ b/sethgottlieb/content/social/rejects.html
@@ -53,6 +53,11 @@
  	    <p>Meetup is an awesome site and if you read <a href="http://www.amazon.com/gp/product/0143114948/ref=as_li_ss_tl?ie=UTF8&tag=contenthere-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=0143114948">Here Comes Everybody: The Power of Organizing Without Organizations</a><img src="http://www.assoc-amazon.com/e/ir?t=contenthere-20&l=as2&o=1&a=0143114948" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />, you only appreciate it more.  That said, I don't have time to get to Meetups.</p>
 
  	</li>
+ 	<li class="service-icon service-quora" >
+ 	    <h3><a href="http://www.quora.com/Seth-Gottlieb" title="Seth Gottlieb on Quora">Quora</a></h3>
+ 	    <p>Quora was interesting when it was new. It felt a little groundbreaking. Like it was going to change how we used the web. The early discussions were great thanks to a smart and energetic early adopter community.  At the time I was very interested in the startup scene and there were a lot of entrepreneurs talking about company successes and failures.  Then I started to realize that Quora wasn't really different from any other Q&amp;A site.  I think Stack Overflow (and derived sites) is the real category killer here.  The litmus test for me is that Stack Overflow content up comes up on the terms that I search for, which are mainly technical.  I don't know if I would ever get into the habit of idly lurking on Quora to listen in on conversations.</p>
+
+ 	</li>
  	<li class="service-icon service-tumblr">
  	    <h3><a  href="http://sggottlieb.tumblr.com/" title="Seth Gottlieb on Tumblr">Tumblr</a></h3>
  	    <p>If you are looking at traffic and adoption, Tumblr is hugely successful.  It is amazing how media companies are using the platform.  I like the application and made a few posts with the intention of making it my personal blog.  But the truth is, I just don't have much left over to say after my <a href="http://www.contenthere.net">blog</a>, Twitter, and Google Plus</p>
