added 2012 and 2013 conferences

--- a/sethgottlieb/content/product/index.html
+++ b/sethgottlieb/content/product/index.html
@@ -29,6 +29,9 @@
 
 Over the past couple of years, I have presented at the following conferences:
 <ul>
+
+    <li><a href="http://nowwhatconference.com/">Now What Conference 2013</a></li>
+    <li><a href="http://gilbaneboston.com">Gilbane Boston 2012</a></li>
     <li><a href="http://gilbaneboston.com">Gilbane Boston 2011</a></li>
     <li><a href="http://jboye.com/conferences/philadelphia11/">J. Boye 2011</a></li>
 	<li><a href="http://gilbaneboston.com">Gilbane Boston 2009</a></li>
